kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-image:latest
          imagePullPolicy: Never # Usa l'immagine locale senza cercare nel registry
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend # Non backend-service perchè nel compose era solo backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 # Service port
      targetPort: 8000 # Container port
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8000
